# qtoky

backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/users/: handler.rs
backend/src/db/: mongo.rs
backend/src/errors/: api_error.rs  error.rs  mod.rs
backend/src/models/: mod.rs  payment_method.rs  product.rs  sale.rs  user.rs
backend/src/rest/: mod.rs
backend/src/rest/auth/: handler.rs  routes.rs
backend/src/rest/products/: handler.rs  routes.rs
backend/src/rest/sales/: handler.rs  mod.rs  routes.rs
backend/src/rest/users/: handler.rs  routes.rs
backend/src/services/: auth_service.rs  mod.rs  product_service.rs  sale_service.rs
backend/src/utils/: jwt.rs  mod.rs
rest_api/: Cargo.toml
rest_api/src/: main.rs
rest_api/src/api/: mod.rs
rest_api/src/api/auth/: handler.rs  routes.rs
rest_api/src/api/products/: handler.rs  routes.rs
rest_api/src/api/users/: handler.rs  routes.rs
rest_api/src/errors/: api_error.rs  mod.rs  service_error.rs
rest_api/src/middlewares/: auth_middleware.rs
rest_api/src/models/: product.rs  user.rs
rest_api/src/services/: auth_service.rs  mod.rs  product_service.rs  user_service.rs
rest_api/src/utils/: function.rs  jwt.rs  mod.rs
