[package]
name = "qtoky"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
dotenvy = "0.15"
mongodb =  "3.2.3"
bson = {version="2.15.0", features=["chrono-0_4"]}
argon2 = "0.5.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# derive_more = { version = "2", features = ["full"] }
thiserror = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3.31"
regex = "1.11.1"
validator = {version="0.20.0", features=["derive"]}
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.1"
chrono = {version="0.4.41", features=["serde"]}
futures-util = "0.3.31"
nanoid = "0.4.0"
