[package]
name = "karat"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
dotenvy = "0.15"
mongodb =  "3.2.3"
bson = "2.15.0"
argon2 = "0.5.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "2", features = ["full"] }
thiserror = "1.0"
futures = "0.3.31"
